[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protogrid"
version = "0.1.0"
description = "A lightweight and standardized API response utility for Python web API frameworks."
readme = { file = "PYPI.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "Matrixxboy", email = "matrix.utsav.lankapati@gmail.com" }
]

maintainers = [
    { name = "Matrixxboy", email = "matrix.utsav.lankapati@gmail.com" }
]

keywords = [
    "api",
    "response",
    "standardized",
    "pagination",
    "fastapi",
    "flask",
    "metadata",
    "error-handling"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Framework :: Flask"
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "build",
    "twine"
]

[project.urls]
Homepage = "https://twomportal.vercel.app/protogrid/home"
Documentation = "https://twomportal.vercel.app/protogrid/docs"
Source = "https://github.com/Matrixxboy/protogrid"
Issues = "https://github.com/Matrixxboy/protogrid/issues"
Changelog = "https://github.com/Matrixxboy/protogrid/releases"

[tool.setuptools.packages.find]
include = ["protogrid*"]
